tests/spec/compile-fail/032_dynamic_self_return_interface.zn
// category: compile-fail
// profile: freestanding
// purpose: Self-returning interface methods are static-only requirements

module tests.fail.dynamicSelfReturnInterface;

interface Duplicable {
    fn duplicate(self) -> Self;
}

fn duplicateAny(value: Box<Duplicable>) {
    let copy = value.duplicate(); // expected-error: method returning Self cannot be dynamically dispatched
}
